Fix butotn margin on mobile

--- a/src/index/style.scss
+++ b/src/index/style.scss
@@ -156,6 +156,7 @@ body,
 
   .btn {
     margin-right: 0.6em;
+    margin-top: 0.6em;
     background: none;
     color: $black;
 
